--- a/calc.html
+++ b/calc.html
@@ -536,6 +536,11 @@
              $("ddlServant").options.add(new Option(`【${servant.star}】【${servant.Class}】${servant.name}`, servant.id));           
         })
     }
+    function adjHp(){
+        let totalHp = getFloat("txtMaxHp") + getFloat("txtFouHp") + getFloat("txtCraftEssenceHp");
+        $("txtRemainHp").value = totalHp;
+        adjustNpRemainHpDamage();
+    }
     function adjustNpRemainHpDamage() {
         let id = $("ddlServant").value;
         if(id == "-1") {
@@ -546,27 +551,57 @@
             calNpRemainHpDamage();
         }
     }
-
+    //计算双子宝具总倍率
+    function calNpRemainHpDamage() {
+        let servant = servants[$("ddlServant").value];
+        let ocLevel = $("ddlOvercharge").value;
+        //附加倍率《超蓄力威力提升》 (此倍率×自身已损失HP所占百分比,与宝具倍率加算)
+        //【※总倍率＝攻击倍率+HP特攻倍率*(1—现在HP/最大HP)】
+        let maxHp = getFloat("txtMaxHp");
+        let fouHp = getFloat("txtFouHp");
+        let craftEssenceHp = getFloat("txtCraftEssenceHp");
+        let totalHp = maxHp + fouHp + craftEssenceHp;
+        let remainHp = getFloat("txtRemainHp");
+        //附加倍率
+        let additionalCoef = servant.oc[ocLevel] * Math.max(0, 1 - remainHp / totalHp);
+        //总宝具倍率
+        let npCoef = servant.NP[$("ddlNpLevel").value] + additionalCoef;
+        //向下取整总宝具倍率
+        $("txtNpCoefficient").value = Math.floor(npCoef * 10) / 10;
+    }
+    //宝具等级选中项发生变化事件
+    function changeNpCoefficient() {
+        let servant = servants[$("ddlServant").value];
+	$("txtNpCoefficient").value = servant.NP[$("ddlNpLevel").value];
+        if (servant.oc.type == "NpRemainHpDamage") {//双子宝具
+            calNpRemainHpDamage();
+        }
+        else if (servant.oc.type == "OcNpDamage") {//自爆弓
+            calOcNpDamage();
+        }
+    }
+    //计算自爆弓宝具总倍率
+    function calOcNpDamage() {
+        let servant = servants[$("ddlServant").value];
+        let ocLevel = $("ddlOvercharge").value;
+        let npCoef = servant.NP[$("ddlNpLevel").value] + servant.oc[ocLevel];
+        $("txtNpCoefficient").value = npCoef;
+    }
     //绑定从者基本信息
     function bindServantData(id) {
         let servant = servants[id];
         //1.阵营
         $("spanAttribute").innerHTML = "<a href='javascript:;' data-value='@" + servant.attribute + "' onclick='autoClickSearch(this)'>" + servant.attribute + "</a>"
-
 	//2.基本数据
 	$("txtNTarget").value = servant.target;
 	$("txtNHits").value = servant.hit;
-	$("txtNpGain").value = servant.np;
         $("txtAttack").value = servant.atk;
         $("txtMaxHp").value = servant.hp;
-        $("txtRemainHp").value = servant.hp + 1000;
-
+	$("txtNpGain").value = servant.np;
         //3.宝具倍率
-        changeNpCoefficient(servant);
-
+        changeNpCoefficient();
         //4.卡色
         document.querySelector("#ddlColor option[value='" + servant.cardColor + "']").selected = true;
-
         //5.从者职介
         let Classes = $("ddlClass").options;
         for (let i = 0; i < Classes.length; i++) {
@@ -575,148 +610,58 @@
                 Class.selected = true;
             }
         }
-
         //6.职介技能
         bindClassSkill(servant);
-
         //7.宝具副效果补充(oc特攻只能展示一种副效果，如：1001的oc特攻只展示了宝具特攻，副效果的20宝具威力buff没展示，在这进行补充)
         bindNpEffect(servant);
-
         //8.属性
         bindAlignments(servant);
     }
-
+    //绑定从者职介技能
+    function bindClassSkill(servant) {
+        //{ cardBuff: 10, damagePlus: 0}
+        let ClassSkill = servant.ClassSkill;
+	if (ClassSkill && ClassSkill.cardBuff) {
+            $("txtCardBuff").dataset.value = ClassSkill.cardBuff;
+        }
+        else {
+            $("txtCardBuff").dataset.value = 0;
+        }
+        if (ClassSkill && ClassSkill.damagePlus) {
+            $("txtDamagePlus").basevalue = ClassSkill.damagePlus;
+        }
+        else {
+            $("txtDamagePlus").basevalue = 0;
+        }
+    }
     //宝具副效果补充
     function bindNpEffect(servant) {
         let npEffect = servant.npEffect;
-        if (npEffect) {
-            let npStrength = npEffect.npStrength;//宝具威力buff
-            //!isNaN(null)，返回true，需要去掉这种情况
-            if (npStrength && !isNaN(npStrength)) {//单个数值，比如1001宝具的20%宝具威力buff
-                $("txtNpStrength").value = npStrength;
-            }
-            let cardBuff = npEffect.cardBuff;//卡牌buff
-            if (cardBuff && !isNaN(cardBuff)) {//单个数值，比如剑兰宝具的30%蓝魔放buff
-                $("txtCardBuff").value = cardBuff;
-            }
-	    let npSpecialAttack = npEffect.specialAttack;
-	    if (npSpecialAttack && !isNaN(npSpecialAttack)) {
-                $("txtNpSpecialAttack").value = npSpecialAttack;
-	    }
-        }
-    }
-
-    //绑定从者职介信息
-    function bindClassSkill(servant) {
-        //{ cardColor: 1, cardBuff: 10, damagePlus: 0}
-        let ClassSkill = servant.ClassSkill;
-
-        if (ClassSkill && Object.keys(ClassSkill).length > 0) {
-            if (!isNaN(ClassSkill.cardBuff)) {
-                $("txtCardBuff").dataset.value = ClassSkill.cardBuff;
-                $("txtCardBuff").value = ClassSkill.cardBuff;
-            }
-	    else {
-                $("txtCardBuff").dataset.value = 0;
-                $("txtCardBuff").value = 0;
-	    }
-            if (!isNaN(ClassSkill.damagePlus)) {
-		$("txtDamagePlus").basevalue = ClassSkill.damagePlus;
-                $("txtDamagePlus").value = ClassSkill.damagePlus;
-            }
-	    else {
-                $("txtDamagePlus").basevalue = 0;
-                $("txtDamagePlus").value = 0;
-	    }
+        if (npEffect && npEffect.npStrength) {//单个数值，比如1001宝具的20%宝具威力buff
+            $("txtNpStrength").basevalue = npEffect.npStrength;
         }
 	else {
-	    $("txtCardBuff").dataset.value = 0;
-	    $("txtCardBuff").value = 0;
-	    $("txtDamagePlus").basevalue = 0;
-	    $("txtDamagePlus").value = 0;
+	    $("txtNpStrength").basevalue = 0;
 	}
+        if (npEffect && npEffect.cardBuff) {//单个数值，比如剑兰宝具的30%蓝魔放buff
+            $("txtCardBuff").dataset.value = getTxtAttrFloatNum("$txtCardBuff", "value") + npEffect.cardBuff;
+        }
+	if (npEffect && npEffect.npSpecialAttack) {
+            $("txtNpSpecialAttack").value = npSpecialAttack;
+        }
     }
-
-    //计算双子宝具总倍率
-    function calNpRemainHpDamage() {
-        let ocLevel = $("ddlOvercharge").value;
-        let id = $("ddlServant").value;
-        let servant = servants[id];
-        let ocs = servant.oc;
-
-        let NP = $("ddlNpLevel").value;
-        //原宝具倍率
-        let npCoef = servant.NP[NP];
-
-        //附加倍率《超蓄力威力提升》 (此倍率×自身已损失HP所占百分比,与宝具倍率加算)
-        //【※总倍率＝攻击倍率+HP特攻倍率*(1—现在HP/最大HP)】
-        let maxHp = getFloat("txtMaxHp");
-        let fouHp = getFloat("txtFouHp");
-        let craftEssenceHp = getFloat("txtCraftEssenceHp");
-        let totalHp = maxHp + fouHp + craftEssenceHp;
-
-        let remainHp = getFloat("txtRemainHp");
-        //附加倍率
-        let additionalRate = ocs[ocLevel] * (1 - remainHp / totalHp);
-
-        //总宝具倍率
-        npCoef += additionalRate;
-        //向下取整总宝具倍率
-        $("txtNpCoefficient").value = Math.floor(npCoef);
+    function clearBuff(){
+	$("txtNpStrength").value = $("txtNpStrength").basevalue;
+	$("txtCardBuff").value = getTxtAttrFloatNum("txtCardBuff", "value");
+	$("txtAttackBuff").value = 0;
+        $("txtEnemyDefence").value = 0;
+        $("txtSpecialAttack").value = 0;
+	$("txtDamagePlus").value = $("txtDamagePlus").basevalue;
+	$("txtNpGainBuff").value = 0;
+	$("txtOverkill1").value = 0;
+	$("txtOverkill2").value = 0;
+	$("txtOverkill3").value = 0;
     }
-
-    //计算自爆弓宝具总倍率
-    function calOcNpDamage() {
-        let ocLevel = $("ddlOvercharge").value;
-        let id = $("ddlServant").value;
-        let servant = servants[id];
-        let ocs = servant.oc;
-
-        let NP = $("ddlNpLevel").value;
-        //原宝具倍率
-        let npCoef = servant.NP[NP];
-
-        //总宝具倍率
-        npCoef += ocs[ocLevel];
-        //向下取整总宝具倍率
-        $("txtNpCoefficient").value = Math.floor(npCoef);
-    }
-
-	function adjHp(){
-		let fullHp = getFloat("txtMaxHp") + getFloat("txtFouHp") + getFloat("txtCraftEssenceHp");
-		$("txtRemainHp").value = fullHp;
-		calNpRemainHpDamage();
-	}
-	function clearBuff(servant){
-	    if (!servant) {
-                let id = $("ddlServant").value;
-                servant = servants[id];
-            }
-	    $("txtNpSpecialAttack").value = 100;
-            $("txtSpecialAttack").value = 0;
-	    if(isNaN($("txtDamagePlus").basevalue)){
-		$("txtDamagePlus").value = 0;}
-	    else {
-		$("txtDamagePlus").value = $("txtDamagePlus").basevalue;
-	    }
-            $("txtCardBuff").value = $("txtCardBuff").dataset.value;
-            $("txtAttackBuff").value = 0;
-            $("txtNpStrength").value = 0;
-	    $("txtEnemyDefence").value = 0;
-            //设置回被动卡牌buff
-            let originNum = getTxtAttrFloatNum("txtCardBuff", "value");
-            $("txtCardBuff").value = originNum;
-
-            //宝具副效果补充
-            bindNpEffect(servant);
-
-	    $("txtNpGainBuff").value = 0;
-	    $("txtOverkill1").value = 0;
-	    $("txtOverkill2").value = 0;
-	    $("txtOverkill3").value = 0;
-	    $("txtFouAtk").value = 1000;
-	    $("txtFouHp").value = 1000;
-	}
 	
     //根据OC重设所有buff
     function setOc(servant) {
@@ -829,24 +774,7 @@
         }
     }
 
-    //宝具等级选中项发生变化事件
-    function changeNpCoefficient(servant) {
-        if (!servant) {
-            let id = $("ddlServant").value;
-            servant = servants[id];
-        }
-
-        let NP = $("ddlNpLevel").value;
-        let npCoef = servant.NP[NP];
-
-        $("txtNpCoefficient").value = npCoef;
-        if (servant.oc.type == "NpRemainHpDamage") {//双子宝具特攻并且勾选了特攻
-            calNpRemainHpDamage();
-        }
-        else if (servant.oc.type == "OcNpDamage") {//自爆弓特攻
-            calOcNpDamage();
-        }
-    }
+    /////////////////////////////////////////////////////////////////////////
 
     var resultArr = [];
     var rankIndex = 0;
